@@ -100,7 +100,7 @@ inline op vers(out NUM, in NUM) {
 
 =head1 COPYRIGHT
 
-Copyright (C) 2001-2002 Yet Another Society. All rights reserved.
+Copyright (C) 2001-2003 Yet Another Society. All rights reserved.
 
 =head1 LICENSE
 
